[gd_scene load_steps=2 format=3 uid="uid://drps1jepxmcou"]

[ext_resource type="Script" uid="uid://bg2rn3vg8balm" path="res://Scripts/building_menu.gd" id="1_so2em"]

[node name="building_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_so2em")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -200.0
offset_right = 177.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="LeftPanel" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(350, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RecipeName" type="Label" parent="Panel/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Recipe Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/LeftPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="CraftButton" type="Button" parent="Panel/HBoxContainer/LeftPanel/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Craft"

[node name="RightPanel" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/RightPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 7
